<resources>
    <string name="app_name">Zhake</string>

    <string name="layout_register">Registrarse</string>
    <string name="layout_sign_in">Iniciar Sesión</string>
    <string name="layout_request">Tu smoothie</string>
    <string name="layout_order">Orden Completa</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar</string>
    <string name="action_register">Registrarse</string>
    <string name="error_invalid_email">Esta dirección de correo es inválida</string>
    <string name="error_invalid_password">Esta contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"El permiso de acceso a contactos es requerido para la función de rellenar correos"
    </string>
    <string name="hypervinc">¿Olvidaste tu contraseña?</string>

    <string name="error_incorrect_email">Este correo no está registrado</string>

    <!-- Strings related to Register -->
    <string name="title_activity_layout_register">Registrar</string>

    <string name="inf_user">Información del Usuario</string>
    <string name="inf_house">Dirección</string>


    <string name="prompt_fname">Nombre</string>
    <string name="prompt_lname">Apellido</string>
    <string name="prompt_age">Edad</string>
    <string name="prompt_sex">Sexo (M o F)</string>
    <string name="prompt_new_email">Email</string>
    <string name="prompt_new_pass">Contraseña</string>
    <string name="prompt_street">Calle</string>
    <string name="prompt_num">Número</string>
    <string name="prompt_col">Colonia</string>
    <string name="prompt_city">Ciudad</string>
    <string name="prompt_state">Estado</string>
    <string name="prompt_cp">Código Postal</string>
    <string name="error_invalid_sex">El sexo no es válido</string>
    <string name="errro_invalid_age">La edad no es válida</string>

    <!-- Strings related to Request -->
    <string name="medium">Mediano</string>
    <string name="big">Grande</string>

</resources>
