<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="talentics.com.mx.zhake.layout_register">


    <ScrollView
        android:id="@+id/register_formView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_layout">

                <EditText
                    android:id="@+id/pass_text"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_new_pass"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sex_layout">

                <EditText
                    android:id="@+id/email_text"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_new_email"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/user_text"
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/inf_user"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fname_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/fname_text"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_fname"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lname_layout"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="40dp"
                app:layout_constraintLeft_toRightOf="@+id/fname_layout"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/lname_text"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_lname"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/age_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toRightOf="@+id/sex_layout"
                app:layout_constraintTop_toBottomOf="@+id/lname_layout">

                <EditText
                    android:id="@+id/age_text"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_age"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sex_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fname_layout">

                <EditText
                    android:id="@+id/sex_text"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_sex"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/house_text"
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="300dp"
                android:text="@string/inf_house"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/street_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/house_text">

                <EditText
                    android:id="@+id/street_text"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_street"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/num_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toRightOf="@+id/street_layout"
                app:layout_constraintTop_toBottomOf="@+id/house_text">

                <EditText
                    android:id="@+id/num_text"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prompt_num"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:layout_editor_absoluteX="65dp"
                    tools:layout_editor_absoluteY="226dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/col_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/street_layout">

                <EditText
                    android:id="@+id/col_text"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_col"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/city_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toRightOf="@+id/col_layout"
                app:layout_constraintTop_toBottomOf="@+id/num_layout">

                <EditText
                    android:id="@+id/city_text"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_city"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text|textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/state_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/col_layout">

                <EditText
                    android:id="@+id/state_text"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_state"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cp_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toRightOf="@+id/state_layout"
                app:layout_constraintTop_toBottomOf="@+id/city_layout">

                <EditText
                    android:id="@+id/cp_text"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_cp"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</LinearLayout>
